[package]
name = "service_derive"
version = "0.1.0"
authors = ["zhaobo <934295740@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn={version="*",features=["full"]}
quote="*"
proc-macro2="*"
Inflector = "0.11.4"
darling="0.10"


